# Andrew-Lee-Cruz

./: .env.example  .gitignore  InfinityClaim.sol  LICENSE  LICENSE-UCL-INF.txt  Makefile  PoAi  README.md  Unified_Blueprint.md  base.py  chainbreach_tracker.md  chatgpt.py  daemon_heartbeat.py  deploy_all.sh  deploy_violet_af.sh  device_agent.py  drive.py  gmail.py  hub.py  jobs.py  mint_genesis.sh  netsleuth.sh  notarize_event.py  package.json  policies.yaml  policy_enforcer.py  quantum_results_VS_1754675601466.json  requirements.txt  royalty_voice_trigger.xml  slack.py  telegram.py  termux-fd-event.sh  test_violet_af.py  wrangler.toml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  release-drafter.yml
axiom-dev-core/: core.py  requirements.txt
axiom_test_logs/: reflect_chain_20250808.json
bootstrap_test_logs/: VioletState.json  reflect_chain_20250808.json
cloudflare-chain/: wrangler.toml
contracts/: AXIOM_TOE_Anchor.sol  ChainlinkAutomation.sol  PoAIRegistry.sol  PrintingLicense.sol  hardhat.config.js  package.json
cruz-algebra/: cruz_f.m
demo-app/: index.html
docs/: POAI_SPEC.md  SECURITY.md  architecture.md  cruz-theorem-complete.md  cruz-theorem.md  provenance.json
hardhat/: .env.example  README.md  hardhat.config.js  package.json
integration_test_logs/: VioletState.json  reflect_chain_20250808.json
omni-adapters/solana/: Cargo.toml
pages-frontend/: .env.example  index.html  package.json  tailwind.config.js  vite.config.ts
poai-devnet/: Dockerfile  Dockerfile.abci  docker-compose.yml  go.mod
poai-sim/: requirements.txt  server.py
(+106 files in other folders)
